source/turtlebot3_ws/src/Sensor_Ros2/log/build_2025-10-05_15-04-27/sub_robot_sim/stdout_stderr.log
[ 50%] Building CXX object CMakeFiles/mock_main_odom.dir/src/mock_main_odom.cpp.o
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/sub_robot_sim/src/mock_main_odom.cpp: In member function ‘void MockMainOdomNode::on_timer()’:
/home/ubuntu/Intel_study/Intel7_Final_Project_5_Team/RoS2/Sensor_Ros2/src/sub_robot_sim/src/mock_main_odom.cpp:75:38: error: ‘tf2_geometry_msgs’ has not been declared
   75 |     odom_msg.pose.pose.orientation = tf2_geometry_msgs::toMsg(q);
      |                                      ^~~~~~~~~~~~~~~~~
gmake[2]: *** [CMakeFiles/mock_main_odom.dir/build.make:76: CMakeFiles/mock_main_odom.dir/src/mock_main_odom.cpp.o] 오류 1
gmake[1]: *** [CMakeFiles/Makefile2:137: CMakeFiles/mock_main_odom.dir/all] 오류 2
gmake: *** [Makefile:146: all] 오류 2
